--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>SOM</title>
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto" rel="stylesheet">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app" style="position:absolute;top:0;left:0;width:100vw;height:100vh;background-color:#a8e2dc">
+    <h1 style="margin:0;padding:0;position:relative;margin-top:50vh;left:0;text-align:center;font-family:'Roboto','Arial Narrow',Arial,sans-serif;color:white;">Loading</h1>
+  </div>
   <script src="bundle.js"></script>
 </body>
 </html>
