Update workflow for 'dev' and 'prod' pipelines
Development pipeline (npm run dev) now dynamically generates in-memory HMR files and serves them up on-the-fly.

Production pipeline (npm run build) now cleans the output folder (minus php files), generates static asset files with chunkhashes for cache-busting, and minfies all output. It also extracts CSS from Vue files and produces a cache-buster CSS file. All assets (vendor, manifest & main, CSS) are imported into the output HTML.

--- a/www/index.html
+++ b/www/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SOM</title>
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto" rel="stylesheet">
-</head>
-<body>
-  <div id="app" style="position:absolute;top:0;left:0;width:100vw;height:100vh;background-color:#a8e2dc">
-    <h1 style="margin:0;padding:0;position:relative;margin-top:50vh;left:0;text-align:center;font-family:'Roboto','Arial Narrow',Arial,sans-serif;color:white;">Loading</h1>
-  </div>
-  <script src="bundle.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>SOM</title><link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto" rel="stylesheet"><link href="style.a752ec53d720e606b79a.css" rel="stylesheet"></head><body><div id="app" style="position:absolute;top:0;left:0;width:100vw;height:100vh;background-color:#a8e2dc"><h1 style="margin:0;padding:0;position:relative;margin-top:50vh;left:0;text-align:center;font-family:'Roboto','Arial Narrow',Arial,sans-serif;color:white">Loading</h1></div><script type="text/javascript" src="manifest.31e60432efeecd284d4a.js"></script><script type="text/javascript" src="vendor.ffd881ec3859f9610bf0.js"></script><script type="text/javascript" src="main.a752ec53d720e606b79a.js"></script></body></html>
