--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>SOM</title>
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-  <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
-    <div id="app" style="position:absolute;top:0;left:0;width:100vw;height:100vh;background-color:#a8e2dc">
+    <div id="app" style="position:absolute;top:0;left:0;width:100vw;height:100vh;background-color:black">
       <h1 style="margin:0;padding:0;position:relative;margin-top:50vh;left:0;text-align:center;font-family:'Roboto','Arial Narrow',Arial,sans-serif;color:white;">Loading</h1>
     </div>
   </body>
