Improved default view styling

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
-    <div id="app" style="position:absolute;top:0;left:0;width:100vw;height:100vh;background-color:black">
+    <div id="app" style="position:absolute;top:0;left:0;width:100vw;height:100vh;background-color:rgb(53, 148, 232)">
       <h1 style="margin:0;padding:0;position:relative;margin-top:50vh;left:0;text-align:center;font-family:'Roboto','Arial Narrow',Arial,sans-serif;color:white;">Loading</h1>
     </div>
   </body>
